# litAz_billing_VE

./: .dockerignore  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  sheets_fill_client_ids.gs
migration/: Cargo.toml
migration/src/: lib.rs  m20240001_000001_create_company_profiles.rs  m20240001_000002_create_clients.rs  m20240001_000003_create_exchange_rates.rs  m20240001_000004_create_numbering_sequences.rs  m20240001_000005_create_control_number_ranges.rs  m20240001_000006_create_invoices.rs  m20240001_000007_create_invoice_items.rs  m20240001_000008_create_credit_notes.rs  m20240001_000009_create_debit_notes.rs  m20240001_000010_create_delivery_notes.rs  m20240001_000011_create_tax_withholdings_iva.rs  m20240001_000012_create_tax_withholdings_islr.rs  m20240001_000013_create_purchase_book_entries.rs  m20240001_000014_create_sales_book_entries.rs  m20240001_000015_create_audit_logs.rs  m20240001_000016_fix_invoice_items_created_by_purchase_rif_arc_unique.rs  m20240001_000017_add_fk_invoice_id_book_entries.rs  m20240001_000018_remove_invoice_annulment.rs  m20240001_000019_fix_arc_sequence_and_audit_actions.rs  m20240001_000020_add_igtf_to_invoices.rs  m20240001_000021_add_multi_company_support.rs  m20240001_000022_enable_unaccent_extension.rs
src/: main.rs
src/api/: README.md  books.rs  clients.rs  company.rs  credit_notes.rs  debit_notes.rs  delivery_notes.rs  helpers.rs  invoices.rs  mod.rs  reports.rs  withholdings.rs
src/config/: README.md  database.rs  mod.rs  settings.rs
src/domain/: README.md  mod.rs
src/dto/: book_dto.rs  client_dto.rs  company_dto.rs  credit_note_dto.rs  debit_note_dto.rs  delivery_note_dto.rs  invoice_dto.rs  mod.rs  response.rs  withholding_islr_dto.rs  withholding_iva_dto.rs
src/entities/: audit_logs.rs  clients.rs  company_profiles.rs  control_number_ranges.rs  credit_notes.rs  mod.rs  (+10 more)
(+47 files in other folders)
