[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
]

[features]
cli = ["sea-orm-migration/cli"]
